--- a/SettingsGoogle/res/values/bools.xml
+++ b/SettingsGoogle/res/values/bools.xml
@@ -7,9 +7,11 @@
     <bool name="config_connectivity_helper_call_quality_default_value">true</bool>
     <bool name="config_connectivity_helper_d2d_default_value">false</bool>
     <bool name="config_face_enroll_confirmation_show_illustration">true</bool>
-    <bool name="config_face_enroll_use_traffic_light">false</bool>
+    <bool name="config_face_enroll_use_traffic_light">true</bool>
     <bool name="config_face_settings_attention_supported">true</bool>
     <bool name="config_face_settings_should_manage_preview">true</bool>
+    <bool name="config_face_intro_show_less_secure">true</bool>
+    <bool name="config_face_intro_show_require_eyes">false</bool>
     <bool name="config_gesture_settings_enabled">true</bool>
     <bool name="config_handle_sim_slot_change">true</bool>
     <bool name="config_keep_contextual_card_dismissal_timestamp">true</bool>
