SystemUIGoogle: QPR2 Updates
Signed-off-by: Alvin Francis <nivlafx@gmail.com>

--- a/SystemUIGoogle/res/values/ids.xml
+++ b/SystemUIGoogle/res/values/ids.xml
@@ -90,6 +90,7 @@
     <item type="id" name="temperature_value"/>
     <item type="id" name="text_group"/>
     <item type="id" name="timestamp"/>
+    <item type="id" name="title_text" />
     <item type="id" name="transcription"/>
     <item type="id" name="upper_text"/>
     <item type="id" name="url_container"/>
