--- a/SystemUIGoogle/res/values/styles.xml
+++ b/SystemUIGoogle/res/values/styles.xml
@@ -7,6 +7,9 @@
         <item name="android:layout_centerVertical">true</item>
         <item name="android:alpha">0.0</item>
     </style>
+    <style name="ElmyraDotStyle" parent="@style/DotStyle">
+        <item name="android:layout_gravity">bottom|center</item>
+    </style>
     <style name="EnhancedSmartspaceTextSubtitle" parent="@style/EnhancedSmartspaceTextTitle">
         <item name="android:textSize">@dimen/enhanced_smartspace_subtitle_size</item>
         <item name="android:fontFamily">@*android:string/config_bodyFontFamily</item>
